// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataTable should render autoload 1`] = `
<DocumentFragment>
  <table
    class="data-table"
  >
    <thead>
      <tr>
        <th
          class="data-table__header-cell--checkbox"
        >
           
        </th>
        <th
          class="data-table__header-cell--sortable data-table__header-cell--ascend"
        >
          Column 1
        </th>
        <th
          class=""
        >
          Column 2
        </th>
        <th
          class="data-table__header-cell--sortable"
        >
          <h1>
            Column 3
          </h1>
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        class="data-table__row--selected"
      >
        <td>
          <input
            aria-label="id0"
            checked=""
            data-id="id0"
            type="checkbox"
          />
        </td>
        <td>
          foo
        </td>
        <td>
          bar
        </td>
        <td>
          baz
        </td>
      </tr>
      <tr>
        <td>
          <input
            aria-label="id1"
            data-id="id1"
            type="checkbox"
          />
        </td>
        <td>
          foo
        </td>
        <td>
          bar
        </td>
        <td>
          baz
        </td>
      </tr>
      <tr>
        <td>
          <input
            aria-label="id2"
            data-id="id2"
            type="checkbox"
          />
        </td>
        <td>
          foo
        </td>
        <td>
          bar
        </td>
        <td>
          baz
        </td>
      </tr>
      <tr>
        <td>
          <input
            aria-label="id3"
            data-id="id3"
            type="checkbox"
          />
        </td>
        <td>
          foo
        </td>
        <td>
          bar
        </td>
        <td>
          baz
        </td>
      </tr>
      <tr>
        <td>
          <input
            aria-label="id4"
            data-id="id4"
            type="checkbox"
          />
        </td>
        <td>
          foo
        </td>
        <td>
          bar
        </td>
        <td>
          baz
        </td>
      </tr>
      <tr>
        <td>
          <input
            aria-label="id5"
            data-id="id5"
            type="checkbox"
          />
        </td>
        <td>
          foo
        </td>
        <td>
          bar
        </td>
        <td>
          baz
        </td>
      </tr>
      <tr>
        <td>
          <input
            aria-label="id6"
            data-id="id6"
            type="checkbox"
          />
        </td>
        <td>
          foo
        </td>
        <td>
          bar
        </td>
        <td>
          baz
        </td>
      </tr>
      <tr>
        <td>
          <input
            aria-label="id7"
            data-id="id7"
            type="checkbox"
          />
        </td>
        <td>
          foo
        </td>
        <td>
          bar
        </td>
        <td>
          baz
        </td>
      </tr>
      <tr>
        <td>
          <input
            aria-label="id8"
            data-id="id8"
            type="checkbox"
          />
        </td>
        <td>
          foo
        </td>
        <td>
          bar
        </td>
        <td>
          baz
        </td>
      </tr>
      <tr>
        <td>
          <input
            aria-label="id9"
            data-id="id9"
            type="checkbox"
          />
        </td>
        <td>
          foo
        </td>
        <td>
          bar
        </td>
        <td>
          baz
        </td>
      </tr>
    </tbody>
  </table>
  <div
    class="data-loader__loading"
  >
    <div
      class="loader-container"
    >
      <test-file-stub
        classname="loader"
        height="100"
        width="100"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`DataTable should render click-to-load 1`] = `
<DocumentFragment>
  <table
    class="data-table"
  >
    <thead>
      <tr>
        <th
          class="data-table__header-cell--checkbox"
        >
           
        </th>
        <th
          class="data-table__header-cell--sortable data-table__header-cell--ascend"
        >
          Column 1
        </th>
        <th
          class=""
        >
          Column 2
        </th>
        <th
          class="data-table__header-cell--sortable"
        >
          <h1>
            Column 3
          </h1>
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        class="data-table__row--selected"
      >
        <td>
          <input
            aria-label="id0"
            checked=""
            data-id="id0"
            type="checkbox"
          />
        </td>
        <td>
          foo
        </td>
        <td>
          bar
        </td>
        <td>
          baz
        </td>
      </tr>
      <tr>
        <td>
          <input
            aria-label="id1"
            data-id="id1"
            type="checkbox"
          />
        </td>
        <td>
          foo
        </td>
        <td>
          bar
        </td>
        <td>
          baz
        </td>
      </tr>
      <tr>
        <td>
          <input
            aria-label="id2"
            data-id="id2"
            type="checkbox"
          />
        </td>
        <td>
          foo
        </td>
        <td>
          bar
        </td>
        <td>
          baz
        </td>
      </tr>
      <tr>
        <td>
          <input
            aria-label="id3"
            data-id="id3"
            type="checkbox"
          />
        </td>
        <td>
          foo
        </td>
        <td>
          bar
        </td>
        <td>
          baz
        </td>
      </tr>
      <tr>
        <td>
          <input
            aria-label="id4"
            data-id="id4"
            type="checkbox"
          />
        </td>
        <td>
          foo
        </td>
        <td>
          bar
        </td>
        <td>
          baz
        </td>
      </tr>
      <tr>
        <td>
          <input
            aria-label="id5"
            data-id="id5"
            type="checkbox"
          />
        </td>
        <td>
          foo
        </td>
        <td>
          bar
        </td>
        <td>
          baz
        </td>
      </tr>
      <tr>
        <td>
          <input
            aria-label="id6"
            data-id="id6"
            type="checkbox"
          />
        </td>
        <td>
          foo
        </td>
        <td>
          bar
        </td>
        <td>
          baz
        </td>
      </tr>
      <tr>
        <td>
          <input
            aria-label="id7"
            data-id="id7"
            type="checkbox"
          />
        </td>
        <td>
          foo
        </td>
        <td>
          bar
        </td>
        <td>
          baz
        </td>
      </tr>
      <tr>
        <td>
          <input
            aria-label="id8"
            data-id="id8"
            type="checkbox"
          />
        </td>
        <td>
          foo
        </td>
        <td>
          bar
        </td>
        <td>
          baz
        </td>
      </tr>
      <tr>
        <td>
          <input
            aria-label="id9"
            data-id="id9"
            type="checkbox"
          />
        </td>
        <td>
          foo
        </td>
        <td>
          bar
        </td>
        <td>
          baz
        </td>
      </tr>
    </tbody>
  </table>
  <div
    class="data-loader__loading"
  >
    <button
      class="button secondary"
      data-testid="click-to-load-more"
      type="button"
    >
      Load more data
    </button>
  </div>
</DocumentFragment>
`;
